--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.32",
+    "@nextui-org/navbar": "^2.0.31",
+    "@nextui-org/react": "^2.4.0",
+    "@nextui-org/system": "^2.2.0",
+    "@nextui-org/theme": "^2.2.4",
+    "framer-motion": "^11.2.8",
     "next": "14.2.3",
     "next-navigation": "^1.0.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/node": "^20",
