--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.32",
+    "@nextui-org/card": "^2.0.29",
     "@nextui-org/navbar": "^2.0.31",
     "@nextui-org/react": "^2.4.0",
     "@nextui-org/system": "^2.2.0",
